deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: kic-health-service
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc-web
  selector:
    app: kic-health
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: kic-health
spec:
  selector:
    matchLabels:
      app: kic-health
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: kic-health
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE:TAG
          name: kic-health
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
