deployment/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: kic
  name: kic-health
spec:
  selector:
    matchLabels:
      app: kic-health
  action: CUSTOM
  provider:
    name: ext-authz-grpc
  rules:
    - to:
        - operation:
            paths: [
              "/kic.health.Health/GenerateHealthForUserRequest"
            ]
